# deploy-fastapi

./: .env.example  .gitignore  Dockerfile  Jenkinsfile  QUICKSTART.md  README.md  UV_MIGRATION.md  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
docs/: CI-CD-FAILURE-HANDLING.md  README.md
scripts/: pre-commit-check.ps1  pre-commit-check.sh
tests/: __init__.py  conftest.py  test_main.py
